--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "jsx-loader": "^0.11.0",
     "style-loader": "^0.8.0",
     "stylus-loader": "^0.4.0",
-    "url-loader": "^0.5.5"
+    "url-loader": "^0.5.5",
+    "gulp": "^3.8.8",
+    "gulp-livereload": "^2.1.1",
+    "webpack": "^1.4.4",
+    "gulp-webpack": "^0.4.1",
+    "gulp-rename": "^1.2.0"
   },
   "dependencies": {
     "react": "^0.11.2",
@@ -22,6 +27,7 @@
     "koa-static": "^1.4.7",
     "koa-router": "^3.4.0",
     "bluebird": "^2.3.4",
-    "rethinkdb": "^1.15.0-0"
+    "rethinkdb": "^1.15.0-0",
+    "react-router": "^0.7.0"
   }
 }
