--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "gulp-livereload": "^2.1.1",
     "webpack": "^1.4.4",
     "gulp-webpack": "^0.4.1",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "main-bower-files": "^2.0.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-flatten": "0.0.3",
+    "gulp-filter": "^1.0.2"
   },
   "dependencies": {
     "react": "^0.11.2",
