--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "koa-router": "^3.4.0",
     "bluebird": "^2.3.4",
     "rethinkdb": "^1.15.0-0",
-    "react-router": "^0.7.0"
+    "react-router": "^0.7.0",
+    "lodash": "^2.4.1"
   }
 }
