--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bluebird": "^2.3.4",
     "rethinkdb": "^1.15.0-0",
     "react-router": "^0.7.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "react-addons": "^0.9.0"
   }
 }
