--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "rethinkdb": "^1.15.0-0",
     "react-router": "^0.7.0",
     "lodash": "^2.4.1",
-    "react-addons": "^0.9.0"
+    "react-addons": "^0.9.0",
+    "baconjs": "^0.7.23"
   }
 }
